--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Myriad Pro';
+    src: url('/fonts/MyriadPro-Regular.eot');
+    src: local('Myriad Pro Regular'), local('MyriadPro-Regular'),
+    url('/fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/MyriadPro-Regular.woff') format('woff'),
+    url('/fonts/MyriadPro-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
     width: 100%;
 }
@@ -6,20 +16,21 @@ body {
     max-width: 1114px;
     margin: auto;
     padding: 0;
+    box-sizing: border-box;
 }
 .benefits {
     display: flex;
     flex-direction: row;
-    margin-bottom: 104px;
+    margin: 0 -16px;
+    padding-bottom: 108px;
+
  }
  .single-benefit {
-     margin-left: 32px;
+     padding: 0 16px;
      text-align: center;
+     width: 33.3%;
 }
-.single-benefit:first-of-type {
-    margin-left: 0;
-}
-.benefit-title{
+.benefit-name{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 700;
@@ -35,22 +46,24 @@ body {
 .header-text {
     margin-bottom: 80px;
 }
-.benefit-header {
-    margin-top: 107px;
+.block-header {
+    padding-top: 108px;
     text-align: center;
+
 }
 h2 {
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
     font-size: 36px;
     text-transform: uppercase;
     font-weight: 400;
+    margin: 0;
 }
 p {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 14px;
     padding: 0;
 }
-.benefit-header > h2:after{
+.block-header > h2:after{
     content: '';
     display: block;
     height: 2px;
@@ -58,6 +71,7 @@ p {
     width: 64px;
     margin: auto;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 .benefit-round{
     width: 70px;
@@ -77,4 +91,97 @@ p {
 }
 i {
     margin: auto;
+}
+.container-price {
+    background-color: #f5f5f5;
+    width: 100%;
+}
+.content-price {
+    background-color: #f5f5f5;
+    height: 884px;
+    max-width: 1110px;
+    margin: auto;
+    padding: 0;
+}
+.prices {
+    display: flex;
+    flex-direction;
+    margin: 0 -20px;
+    padding-bottom: 95px;
+    align-items: flex-end;
+}
+.pricing-slot {
+    padding: 0 20px;
+    text-align: center;
+    width: 33.3%;
+}
+.price-info {
+    background-color: #333333;
+    color: white;
+    margin: 1px;
+}
+.price-name {
+    height: 59px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 22px;
+    box-sizing: border-box;
+    line-height: 20px;
+}
+
+.price-cost {
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
+    font-size: 94px;
+    font-weight: bold;
+    height: 100px;
+    padding-bottom: 2px;
+}
+.currency {
+    font-size: 35px;
+}
+.price-payment {
+    height: 50px;
+    font-family: 'Myriad Pro', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: italic;
+    padding-top: 16px;
+    box-sizing: border-box;
+    line-height: 14px;
+    color: rgba(255,255,255,0.5);
+    border-bottom: #FF8B38 5px solid;
+    padding-bottom: 0;
+}
+.price-payment.no-border {
+    border: none;
+    margin-bottom: 0;
+}
+.price-popular {
+    background-color: #FF8B38;
+    color: white;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    text-transform: uppercase;
+    height: 40px;
+    padding-top: 14px;
+    box-sizing: border-box;
+    margin: 0 1px 1px 1px;
+}
+.price-features {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font: 14px 'Open Sans';
+    line-height: 14px;
+    text-transform: uppercase;
+    color: #86878b;
+    box-sizing: border-box;
+}
+.price-feature {
+    background-color: white;
+    height: 40px;
+    margin: 1px;
+    padding-top: 14px;
+    box-sizing: border-box;
 }
