--- a/style.css
+++ b/style.css
@@ -21,9 +21,7 @@ body {
 .benefits {
     display: flex;
     flex-direction: row;
-    margin: 0 -16px;
-    padding-bottom: 108px;
-
+    margin: 0 -16px 108px;
  }
  .single-benefit {
      padding: 0 16px;
@@ -50,7 +48,6 @@ body {
 .block-header {
     padding-top: 108px;
     text-align: center;
-
 }
 h2 {
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
@@ -98,10 +95,11 @@ i {
 .container-price {
     background-color: #f5f5f5;
     width: 100%;
+    height: 884px;
+    margin: 0;
+    padding: 0;
 }
 .content-price {
-    background-color: #f5f5f5;
-    height: 884px;
     max-width: 1110px;
     margin: auto;
     padding: 0;
