--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .benefits {
     display: flex;
     flex-direction: row;
-    margin: 0 -16px 108px;
+    margin: 0 -16px;
  }
  .single-benefit {
      padding: 0 16px;
@@ -106,7 +106,6 @@ i {
 }
 .prices {
     display: flex;
-    flex-direction;
     margin: 0 -20px;
     align-items: flex-end;
 }
@@ -183,4 +182,97 @@ i {
     margin: 1px;
     padding-top: 14px;
     box-sizing: border-box;
+}
+.container-testimonials {
+    width: 100%;
+    height: 590px;
+    margin: 0;
+    padding: 0;
+}
+.content-testimonials {
+    max-width: 1058px;
+    margin: auto;
+    padding: 0;
+}
+#testimonial-header-text {
+    padding-top: 30px;
+    margin-bottom: 55px;
+}
+.testimonials {
+    display: flex;
+    margin: 0 -60px;
+    flex-direction: row;
+
+}
+.testimonial-single {
+    padding: 0 60px;
+    text-align: left;
+    width: 33.3%;
+    height: 225px;
+    margin: 0;
+}
+.comment-bubble {
+    width: 272px;
+    height: 132px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    position: relative;
+    margin-bottom: 23px;
+}
+.comment-bubble p {
+    margin: 0px;
+    padding-top: 25px;
+    padding-left: 12px;
+    padding-right: 25px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: italic;
+    color: #86878b;
+
+}
+.comment-bubble:before {
+    position: absolute;
+    content: "";
+    top: 100%;
+    left: 28px;
+    border-left: 10px solid transparent;
+    border-top: 15px solid #f5f5f5;
+    border-right: 10px solid transparent;
+}
+.testimonial-author {
+    display: flex;
+}
+
+.author-photo {
+    margin-right: 15px;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    display: flex;
+}
+.author-photo img {
+    max-height: 100%;
+    max-width: 100%;
+    text-align: center;
+    margin: auto;
+}
+.author-info {
+    margin: auto 0;
+}
+
+.author-name {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0;
+    padding-bottom: 0;
+
+}
+.author-job {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #86878b;
+    margin: 0;
+
 }
