--- a/style.css
+++ b/style.css
@@ -267,12 +267,58 @@ i {
     font-weight: 700;
     margin: 0;
     padding-bottom: 0;
-
 }
 .author-job {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #86878b;
     margin: 0;
-
+}
+.button-container {
+    background-image: url("images/bg_button.png");
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 320px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+.button-container:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+.button-content {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0;
+    position: relative;
+    z-index: 2;
+}
+.button-header, .button-text{
+    color: white;
+}
+.button-header {
+    padding-top: 74px;
+}
+.button-text{
+    margin-bottom: 33px;
+}
+.button-header > h2:after {
+    background: white;
+}
+button{
+    width: 135px;
+    height: 42px;
+    border: 2px solid white;
+    background: transparent;
+}
+.download-btn {
+    color: white;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
 }
