--- a/style.css
+++ b/style.css
@@ -310,15 +310,64 @@ i {
 .button-header > h2:after {
     background: white;
 }
-button{
+.button-content button{
     width: 135px;
     height: 42px;
     border: 2px solid white;
     background: transparent;
 }
-.download-btn {
+.btn {
     color: white;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 500;
+}
+.contact-content {
+    width: 100%;
+    height: 614px;
+    margin: 0;
+    padding: 0;
+}
+
+.fields {
+    display: flex;
+    flex-direction: row;
+    width: 1120px;
+    padding: 0 0 42px 0;
+    margin: auto;
+}
+.fields_1 {
+    display: flex;
+    flex-direction: column;
+    margin-right: 68px;
+
+}
+.field_single {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #bdbdbd;
+    height: 30px;
+    width: 526px;
+    padding: 0 15px;
+    margin: 15px 0;
+    border: none;
+    border-bottom: 1px solid #bdbdbd;
+    box-sizing: border-box;
+}
+.fields_2 .field_single {
+    height: 150px;
+    padding: 0;
+}
+textarea {
+    resize: none;
+}
+.form button {
+    width: 135px;
+    height: 42px;
+    border-radius: 4px;
+    border: none;
+    background-color: #FF8B38;
+}
+.button-center {
+    text-align: center;
 }
