--- a/style.css
+++ b/style.css
@@ -327,13 +327,16 @@ i {
     height: 614px;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
+.contact-content .header-text {
+    margin-bottom: 60px;
+}
 .fields {
     display: flex;
     flex-direction: row;
     width: 1120px;
-    padding: 0 0 42px 0;
+    padding: 0 0 27px 0;
     margin: auto;
 }
 .fields_1 {
@@ -367,7 +370,13 @@ textarea {
     border-radius: 4px;
     border: none;
     background-color: #FF8B38;
+    margin-bottom: 80px;
 }
 .button-center {
     text-align: center;
+}
+footer {
+    background-color: black;
+    height: 100px;
+    width: 100%;
 }
