--- a/style.css
+++ b/style.css
@@ -379,4 +379,32 @@ footer {
     background-color: black;
     height: 100px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 36px 0 12px 0;
+    box-sizing: border-box;
+}
+.icons-block {
+    display: flex;
+    flex-direction: row;
+    height: 25px;
+    width: 338px;
+}
+.icons {
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    text-decoration: none;
+    padding: 0 14px;
+    margin: auto;
+}
+.copyright {
+    margin: auto;
+}
+.footer-text {
+    color: white;
+    opacity: 0.5;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
