--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 }
 body {
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 .container-benefits {
     height: 590px;
@@ -407,4 +409,49 @@ footer {
     opacity: 0.5;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 12px;
+}
+header {
+    background-color: black;
+    height: 70px;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+    z-index: 5;
+}
+.menu {
+    margin: auto 0 auto auto;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    color: white;
+}
+li {
+    display: inline-block;
+    opacity: 0.69;
+    padding: 0 23px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+li:last-of-type {
+    padding-right: 0px;
+}
+.header-content {
+    width: 1100px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    padding: 21px 0 22px;
+    justify-content: space-between;
+}
+.logo {
+    height: 27px;
+    width: 79px;
+}
+.logo img {
+    max-width: 100%;
+    max-height: 100%;
 }
