--- a/style.css
+++ b/style.css
@@ -415,8 +415,8 @@ header {
     height: 70px;
     width: 100%;
     margin: 0;
-    position: fixed;
-    z-index: 5;
+    /* position: fixed;
+    z-index: 9999; */
 }
 .menu {
     margin: auto 0 auto auto;
@@ -437,6 +437,13 @@ header {
 }
 .menu li:last-of-type {
     padding-right: 0px;
+
+}
+.menu ul a {
+    color: white;
+    text-decoration: none;
+    outline: none;
+    padding: 0 23px;
 }
 .header-content {
     width: 1100px;
@@ -454,4 +461,133 @@ header {
 .logo img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.container-main {
+    height: 642px;
+    background-image: url("images/panel.png");
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    position: relative;
+    box-sizing: border-box;
+}
+.container-main:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.content-main {
+    max-width: 1100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-sizing: border-box;
+    margin: auto;
+    padding: 0;
+    position: relative;
+    z-index: 2;
+}
+.main-logo {
+    width: 175px;
+    height: 60px;
+}
+.main-logo img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.main-left {
+    padding-top: 110px;
+    width: 514px;
+}
+.main-left button {
+    width: 135px;
+    height: 42px;
+    border: 2px solid white;
+    background: transparent;
+}
+.main-header {
+    padding-bottom: 43px;
+}
+.main-header h1 {
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    font-weight: 300;
+    color: white;
+    text-transform: uppercase;
+}
+.main-header h1:after {
+    content: '';
+    display: block;
+    height: 2px;
+    width: 64px;
+    background: white;
+    margin-top: 40px;
+    margin-bottom: 41px;
+}
+.main-header h3 {
+    font-family: 'Myriad Pro', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 23px;
+    width: 460px;
+    margin: 0;
+}
+.main-right {
+    height: 362px;
+    width: 360px;
+    padding-top: 141px;
+    box-sizing: border-box;
+}
+.main-form {
+    background-color: white;
+    border-radius: 4px;
+    overflow: hidden;
+}
+.main-text {
+    height: 55px;
+    width: 100%;
+    background-color: #f5f5f5;
+    display: flex;
+}
+.main-right form p {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: black;
+    margin: auto;
+}
+.main-right form p span {
+    text-transform: uppercase;
+    color: #FF8B38;
+}
+.main-right form input {
+    width: 285px;
+    margin-right: 37px;
+    margin-left: 38px;
+    padding: 0 14px;
+}
+.main-right form input:last-of-type {
+    margin-bottom: 48px;
+}
+.main-right form input:first-of-type {
+    margin-top: 30px;
+}
+.main-form button {
+    height: 55px;
+    width: 100%;
+    background-color: #FF8B38;
+    display: flex;
+    border: none;
+}
+.main-form button span {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: white;
+    font-weight: 600;
+    margin: auto;
 }
