--- a/style.css
+++ b/style.css
@@ -432,19 +432,19 @@ header {
 .menu li {
     display: inline-block;
     opacity: 0.69;
-    padding: 0 23px;
+    margin: 0 23px;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 .menu li:last-of-type {
-    padding-right: 0px;
+    margin-right: 0px;
 
 }
 .menu ul a {
     color: white;
     text-decoration: none;
     outline: none;
-    padding: 0 23px;
+    margin: 0 23px;
 }
 .header-content {
     width: 1100px;
